# a-star

./: AStar  CMakeLists.txt  build.sh  main.cpp
include/: astar.cpp  astar.hpp
utils/: fs.cpp  fs.hpp  types.hpp
